--- a/css/containers.css
+++ b/css/containers.css
@@ -6,6 +6,7 @@
 #pet-information #photos,
 #pet-information #biography,
 #pet-information #posts,
+#pet-information #pet-detailed-information,
 /* Profile */
 #information-profile,
 /* User Page */
