--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -88,7 +88,7 @@
   margin-left: auto;
 }
 
-.name_and_favorite{
+.profile-text{
   display: flex;
   align-items: center;
   justify-content: center;
