--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -23,12 +23,18 @@
 }
 
 #owner #adoption-pets, 
-#pet #posts, 
-#pet #proposals{
+#pet #posts{
   text-align: left;
   grid-column: 2;
   grid-row-start: 1;
   grid-row-end: 3;
+  padding: 2em;
+}
+
+#pet #proposals{
+  text-align: left;
+  grid-column: 2;
+  grid-row-start: 1;
   padding: 2em;
 }
 
