--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -52,13 +52,9 @@
    padding-top: 1em;
 }
 
-#homepage-profile {
-    position: relative;
-    text-align: center;
-}
-
-#homepage-profile p {
-    text-align: center;
+#homepage-profile .homepage-profile-pet {
+    place-items: center;
+    display: grid;
 }
 
 #homepage-profile .pet-name{
