--- a/css/layout.css
+++ b/css/layout.css
@@ -17,8 +17,13 @@ body {
   display: flex;
   flex-direction: column; 
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #FFFAE2;
+  background: #303030;
   min-height: 100%;
+}
+
+body.dark-theme {
+  color: #eee;
+  background: #121212;
 }
 
 /* ---------- PAGES LAYOUT ----------  */
