Start implement dark mode

--- a/css/containers.css
+++ b/css/containers.css
@@ -25,40 +25,12 @@
     padding: 2em;
     border-radius: 10px;
     box-sizing: border-box;
-    background-color: rgba(255,255,255,0.6);
-    box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
-}
-
-/* || Speech Bubbles */ 
-/* Magic happens bellow, only zini knows  dont touch while refactor */
-
-#pet .infoGrid #question input[type=text], 
-#pet .infoGrid #question #uniquequestion p{
-  position: relative;
-  border: none;
-  background-color: rgb(197, 235, 223);
-  padding: 1.125em 1.5em;
-  font-size: 1.25em;
-  border-radius: 1rem;
-  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
-}
-
-#pet .infoGrid #question input[type=text]::before,
-#pet .infoGrid #question #uniquequestion p::before{
-content: '';
-position: absolute;
-width: 0;
-height: 0;
-bottom: -0.6em;
-left: 22em;
-border: .75rem solid transparent;
-border-bottom: none;
-  border-top-color: rgb(197, 235, 223);
-  box-shadow:	rgba(0, 0, 0, .3);
+    background-color: var(--container-principal);
+    box-shadow:	0 0.125rem 0.5rem var(--container-primary-shadow), 0 0.0625rem 0.125rem var(--container-secondary-shadow);
 }
 
 #pet #question #question-submit section{
-  border: #cccccc 1px solid;
+  border: var(--container-border) 1px solid;
   border-radius: 10px;
   padding: 5px;
   margin-bottom: 15px;
