--- a/css/components.css
+++ b/css/components.css
@@ -1,32 +1,20 @@
 /* ------------- BUTTONS AND INPUTS ------------- */
 
 /* Radio Buttons */
-.hide{display: none;}
-input[type="radio"] + .fa,
-input[type="radio"] + label > .fa { cursor: pointer; }
-/* Unchecked */
-input[type="radio"] + .fa-check-circle:before,
-input[type="radio"] + label > .fa-check-circle:before { content: "\f111"; }
-input[type="radio"] + .fa-venus:before,
-input[type="radio"] + label > .fa-check-circle:before { opacity: 0.4; }
-input[type="radio"] + .fa-mars:before,
-input[type="radio"] + label > .fa-check-circle:before { opacity: 0.4; }
-input[type="radio"] + .fa-paw:before,
-input[type="radio"] + label > .fa-check-circle:before { opacity: 0.4; }
-input[type="radio"] + .fa-genderless:before,
-input[type="radio"] + label > .fa-genderless:before { opacity: 0.4; }
-/* Checked */
 input[type="radio"]:checked + .fa-check-circle:before,
 input[type="radio"]:checked + label > .fa-check-circle:before { content: "\f058"; }
 input[type="radio"]:checked + .fa-venus:before,
 input[type="radio"]:checked + label > .fa-venus:before { color: fuchsia; opacity:1; }
+input[type="radio"]:checked + label > .fa-venus:before { color: var(--male-icon-selected); opacity:1; }
 input[type="radio"]:checked + .fa-mars:before,
 input[type="radio"]:checked + label > .fa-mars:before { color: blue; opacity:1;}
+input[type="radio"]:checked + label > .fa-mars:before { color: var(--female-icon-selected); opacity:1;}
 input[type="radio"]:checked + .fa-paw:before,
 input[type="radio"]:checked + label > .fa-paw:before { color: #008080; opacity:1;}
+input[type="radio"]:checked + label > .fa-paw:before { color: var(--genderless-icon); opacity:1;}
 input[type="radio"]:checked + .fa-genderless:before,
 input[type="radio"]:checked + label > .fa-genderless:before { color: #008080; opacity:1;}
-
+input[type="radio"]:checked + label > .fa-genderless:before { color: var(--paw-selected); opacity:1;}
 input, 
 .login button, 
 #register button,
@@ -41,9 +29,9 @@ input,
 #homepage-intro .found-pet a,
 input[type=submit],
 button{
-    border: 1px solid #008080;
-    background-color: #008080;
-    color: white;
+    border: 1px solid var(--found-pet-background);
+    background-color: var(--found-pet-background);
+    color: var(--found-pet-text);
     transition: 0.3s;
     cursor: pointer;
     padding: 0.5em;
@@ -53,8 +41,8 @@ button{
 #homepage-intro .found-pet a:hover,
 input[type=submit]:hover,
 button:hover{
-    border: 1px solid #004646;
-    background-color: #004646;
+    border: 1px solid var(--found-pet-hover);
+    background-color: var(--found-pet-hover);
 }
 
 #pet button[type=submit]{
@@ -64,26 +52,22 @@ button:hover{
     font-size: large;
 }
 
-#pet .infoGrid #proposals #uniqueproposal button[type=submit]{
-    color: green;
-}
-
 #pet #favorite button[type=submit]{
     background-color: transparent;
-    color: orange;
+    color: var(--favorite);
 }
 
 header .searchbar button,
 #name_and_edit button{
     border: none;
     border-radius: 0;
-    color: black;
+    color: var(--icon-color);
     padding: 0.3em;
     margin: 0;
 }
 
 header .searchbar button{
-    background-color: white;
+    background-color: var(--icon-background-white);
 }
 
 #name_and_edit button{
@@ -91,51 +75,36 @@ header .searchbar button{
 }
 
 input[type=text], input[type=password]{
-    border: 1px solid #ccc;
-}
-
-#pet-update #updatecontainers .updateposts #buttonsposts button[type=submit]{
-    width: 50%;
-    font-size: 16px;
-    border: 1px solid #bb1313;
-    background-color: #bb1313;
-    color: white;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-#pet-update #updatecontainers .updateposts #buttonsposts button[type=submit]:hover{
-    border: 1px solid #7c0e0e;
-    background-color: #7c0e0e;
+    border: 1px solid var(--container-border);
 }
 
 /* ------------- COMMON COMPONENTS ------------- */
 
 a {
-    color: black;
+    color: var(--href-common);
     text-decoration: none;
     cursor: pointer;
 }
 
-a:visited {color: black;}
+a:visited {color: var(--href-common);}
 
 footer a:visited,
 header a:visited {
-    color: white;
+    color: var(--href-header-footer);
 }
 
 footer a,
 header a {
-    color: white;
+    color: var(--href-header-footer);
     text-decoration: none;
 }
 
 /* ------------- ANIMATIONS ------------- */
 
 @keyframes pink_and_blue {
-    0%   {color: rgb(230, 103, 124);}
-    50%  {color: rgb(19, 77, 165);}
-    100%  {color: rgb(230, 103, 124);}
+    0%   {color: var(--animation-color-1);}
+    50%  {color: var(--animation-color-2);}
+    100%  {color: var(--animation-color-1);}
 }
 
 @keyframes bounceIn {
