--- a/css/pages/footer.css
+++ b/css/pages/footer.css
@@ -3,8 +3,8 @@ footer {
     bottom: 0;
     text-align: center;
     padding: 0.5em;
-    color: white;
-    background-color: black;
+    color: var(--footer-color);
+    background-color: var(--footer-background);
     transition: 0.3s;
     opacity: 0.5;
     height: 1.5em;
