--- a/css/pages/modal.css
+++ b/css/pages/modal.css
@@ -9,6 +9,7 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: var(--notifications-background-color); /* Fallback color */
+    background-color: rgba(0,0,0,0.4);
   }
   
   /* Modal Content/Box */
