--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -117,6 +117,12 @@
   border-width: 1px;
 }
 
+#information-profile p{
+  border-bottom: black 1px solid;
+  margin-top:0.5em;
+  margin-bottom: 0.5em;
+}
+
 #information-profile-header{
   display: flex;
   align-items: center;
@@ -168,6 +174,11 @@
   margin-left: auto;
 }
 
+
+#pet #profile-grid #question #question-submit section form button{
+  width: 100px;
+  margin-top: 0.5em;
+}
 
 
 
