--- a/css/layout.css
+++ b/css/layout.css
@@ -87,6 +87,7 @@ body {
     --notifications-border: #888; /* */
     --notifications-close: #aaa; /* */
     --notifications-close-focus: black; /* */
+    --notifications-fading: rgba(0,0,0,0.5);
     /* Pet Profile */
     --photo-next-prev: #bbe1fa; /* */
     /* Homepage */
