--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -118,7 +118,7 @@
 }
 
 #information-profile p{
-  border-bottom: black 1px solid;
+  border-bottom: var(--text-bottom-color) 1px solid;
   margin-top:0.5em;
   margin-bottom: 0.5em;
 }
