--- a/css/pages/update.css
+++ b/css/pages/update.css
@@ -7,12 +7,13 @@
 
     /* style */
     height: 40em;
-    width: 250px;
+    width: 18em;
     text-align: center;
     align-self: flex-start;
 }
 
 #update-page {    
+    justify-content: center;
     align-items: center;
     column-gap: 2em;
 }
@@ -22,13 +23,16 @@
 }
 
 @media screen and (max-width: 1600px) {
-    .update-form {
-        height: auto;
-    } 
 
     #update-page {
         flex-direction: column;
     }
+}
+
+@media screen and (max-width: 680px) {
+    .update-form {
+        height: auto;
+    } 
 }
 
 /* --- User only CSS --- */
