--- a/css/layout.css
+++ b/css/layout.css
@@ -138,6 +138,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: var(--text-color);
   background: var(--background-body);
+  /*background-image: linear-gradient(to bottom right,pink, black);*/
   min-height: 100%;
 }
 
