--- a/css/components.css
+++ b/css/components.css
@@ -1,8 +1,11 @@
 /* ------------- BUTTONS AND INPUTS ------------- */
 
 /* Radio Buttons */
+
 input[type="radio"]:checked + .fa-check-circle:before,
-input[type="radio"]:checked + label > .fa-check-circle:before { content: "\f058"; }
+input[type="radio"]:checked + label > .fa-check-circle:before { content: "\f058"; }/* Unchecked */
+input[type="radio"] + .fa-check-circle:before,
+input[type="radio"] + label > .fa-check-circle:before { content: "\f111"; }
 input[type="radio"]:checked + .fa-venus:before,
 input[type="radio"]:checked + label > .fa-venus:before { color: fuchsia; opacity:1; }
 input[type="radio"]:checked + label > .fa-venus:before { color: var(--male-icon-selected); opacity:1; }
@@ -15,6 +18,10 @@ input[type="radio"]:checked + label > .fa-paw:before { color: var(--genderless-i
 input[type="radio"]:checked + .fa-genderless:before,
 input[type="radio"]:checked + label > .fa-genderless:before { color: #008080; opacity:1;}
 input[type="radio"]:checked + label > .fa-genderless:before { color: var(--paw-selected); opacity:1;}
+input[type="radio"] + .fa,
+input[type="radio"] + label > .fa { cursor: pointer; }
+
+
 input, 
 .login button, 
 #register button,
@@ -121,3 +128,7 @@ header a {
         opacity: 1;
     }
 }
+
+/* ------------- AUXILIARY CLASSES ------------- */
+
+.hide{display: none;}
