--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -7,20 +7,22 @@
 }
 
 #profile-grid {
-  width: 100%;
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto;
   grid-gap: 2em;
   column-width: 10em;
+  margin-left: 10em;
+  margin-right: 10em;
 }
 
 #profile-grid-pet {
-  width: 100%;
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: 25em auto auto;
   grid-gap: 2em;
+  margin-left: 10em;
+  margin-right: 10em;
 }
 
 #pet #information-profile{
@@ -95,6 +97,8 @@
   #profile-grid-pet {
     display: flex;
     flex-direction: column;
+    margin-left: 1em;
+    margin-right: 1em;
   }
 }
 /*style */
