fixed update posts buttons

--- a/css/pages/update.css
+++ b/css/pages/update.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     /* style */
-    height: 40em;
+    min-height: 40em;
     width: 30em;
     text-align: center;
     align-self: flex-start;
@@ -15,10 +15,6 @@
 #update-page {    
     justify-content: center;
     align-items: center;
-}
-
-#update-page button {
-    margin-top: auto;
 }
 
 @media screen and (max-width: 1600px) {
@@ -42,6 +38,28 @@
 /* --- Pet only CSS --- */
 #update-page .update-post {
     display: flex;
+    flex-direction: column;
+}
+
+.edit-post{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+button.button-edit-post{
+   margin-left: auto;
+   margin-left: 11em;
+}
+
+.inputs-post-update{
+    display: flex;
+}
+
+.delete-post{
+    margin-left: auto;
+    padding-top: .8em;
 }
 
 #update-page .update-post input[type=submit] {
