--- a/css/layout.css
+++ b/css/layout.css
@@ -76,7 +76,7 @@ body.dark-theme {
     --background-body: #1b262c; /* background body*/
     --footer-color: white; /* footer text color */
     --footer-background: #1b262c; /* footer background */
-    --text-color: #3282b8;
+    --text-color:  #bbe1fa;
     --text-bottom-color: #3282b8;
     /* Containers */
     --container-principal: #162447; /* Container Colors */
