--- a/css/pages/header.css
+++ b/css/pages/header.css
@@ -68,7 +68,7 @@ header #search-bar {
   border: none;
   padding: 0.3em;
   color: var(--search-background-icon);
-  background-color: var(--search-background-color);
+  background-color: transparent;
 }
 
 #search-bar .mobile-search-bar button{
