final css improvements for dark mode

--- a/css/components.css
+++ b/css/components.css
@@ -13,10 +13,10 @@ input[type="radio"]:checked + .fa-mars:before,
 input[type="radio"]:checked + label > .fa-mars:before { color: blue; opacity:1;}
 input[type="radio"]:checked + label > .fa-mars:before { color: var(--female-icon-selected); opacity:1;}
 input[type="radio"]:checked + .fa-paw:before,
-input[type="radio"]:checked + label > .fa-paw:before { color: #008080; opacity:1;}
+input[type="radio"]:checked + label > .fa-paw:before { color: var(--genderless-icon); opacity:1;}
 input[type="radio"]:checked + label > .fa-paw:before { color: var(--genderless-icon); opacity:1;}
 input[type="radio"]:checked + .fa-genderless:before,
-input[type="radio"]:checked + label > .fa-genderless:before { color: #008080; opacity:1;}
+input[type="radio"]:checked + label > .fa-genderless:before { color: var(--paw-selected); opacity:1;}
 input[type="radio"]:checked + label > .fa-genderless:before { color: var(--paw-selected); opacity:1;}
 input[type="radio"] + .fa,
 input[type="radio"] + label > .fa { cursor: pointer; }
